--- a/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
@@ -3,31 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://kit.fontawesome.com/b868aea368.js" crossorigin="anonymous"></script>
     <title>@ViewData["Title"] - CarnetSanitaire.Web.UI</title>
     <link rel="stylesheet" href="~/lib/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CarnetSanitaire.Web.UI</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <partial name="_LoginPartial" />
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <nav class="nav-wrapper blue darken-1">
+            <a class="brand-logo" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book material-icons"></i>MRCarnetSanitaire</a>
+            <partial name="_LoginPartial" />
         </nav>
     </header>
     <div class="container">
@@ -36,9 +21,19 @@
         </main>
     </div>
 
+
+    <footer class="page-footer blue darken-1">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    &copy; 2020 - MRCarnetSanitaire
+                </div>
+            </div>
+        </div>
+    </footer>
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - CarnetSanitaire.Web.UI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+           
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
