--- a/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul id="nav-mobile" class="right hide-on-med-and-down">
     <li>
