--- a/CarnetSanitaire.Web.UI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CarnetSanitaire.Web.UI/Areas/Identity/Pages/Account/Register.cshtml
@@ -13,6 +13,24 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.UserName"></label>
+                <input asp-for="Input.UserName" class="form-control" />
+                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.Prenom"></label>
+                <input asp-for="Input.Prenom" class="form-control" />
+                <span asp-validation-for="Input.Prenom" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Input.Matricule"></label>
+                <input asp-for="Input.Matricule" class="form-control" />
+                <span asp-validation-for="Input.Matricule" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
