--- a/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
@@ -24,7 +24,7 @@
     else
     {
         <li>
-            <a class="" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="" asp-area="Identity" asp-page="/Account/Register">S'enregister</a>
         </li>
         <li >
             <a class="" asp-area="Identity" asp-page="/Account/Login">Login</a>
