Creation d'une table LogErreur Ajout la gestion des erreur dasn les try catch.

--- a/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
@@ -4,7 +4,7 @@
 
 <ul id="nav-mobile" class="right hide-on-med-and-down">
     <li>
-        <a class="" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+        <a class="" asp-area="" asp-controller="Societes" asp-action="Index">Societes</a>
     </li>
     <li>
         <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
