--- a/CarnetSanitaire.Web.UI/Views/Societes/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h3>Sous-traitants</h3>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Nouveau SousTraitant</a>
 </p>
 <table class="table">
     <thead>
