Ajout du controller et Dal de Etablissement avec un modelView

--- a/CarnetSanitaire.Web.UI/Views/Etablissements/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Etablissements/Details.cshtml
@@ -1,13 +1,14 @@
-﻿@model CarnetSanitaire.Web.UI.Models.Societe
+﻿@model CarnetSanitaire.Web.UI.Models.Etablissement
 
 @{
     ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Details</h1>
 
 <div>
-    <h4>Societe</h4>
+    <h4>Etablissement</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -15,6 +16,12 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Nom)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Capacite)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Capacite)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Coordonnee)
