--- a/CarnetSanitaire.Web.UI/Views/Societes/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarnetSanitaire.Web.UI.Models.SocieteModelView
+﻿@model CarnetSanitaire.Web.UI.Models.ModelViewSociete
 
 @{
     ViewData["Title"] = "Edit";
