--- a/CarnetSanitaire.Web.UI/Views/Etablissements/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Etablissements/Create.cshtml
@@ -1,12 +1,13 @@
-﻿@model CarnetSanitaire.Web.UI.Models.ModelViewSociete
+﻿@model CarnetSanitaire.Web.UI.Models.ModelViewEtablissement
 
 @{
     ViewData["Title"] = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h1>Create</h1>
 
-<h4>Societe</h4>
+<h4>Etablissement</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -16,6 +17,11 @@
                 <label asp-for="Nom" class="control-label"></label>
                 <input asp-for="Nom" class="form-control" />
                 <span asp-validation-for="Nom" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Capacite" class="control-label"></label>
+                <input asp-for="Capacite" class="form-control" />
+                <span asp-validation-for="Capacite" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Adresse" class="control-label"></label>
@@ -63,6 +69,3 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
