--- a/CarnetSanitaire.Web.UI/Areas/Identity/Pages/Account/Register.cshtml
+++ b/CarnetSanitaire.Web.UI/Areas/Identity/Pages/Account/Register.cshtml
@@ -45,6 +45,9 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="red-text text-darken-4"></span>
             </div>
+            <div>
+                @Html.DropDownListFor()
+            </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>    
