--- a/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
@@ -4,10 +4,10 @@
 
     @if (SignInManager.IsSignedIn(User))
     {
-        <li >
-            <a class="" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
         </li>
-        <li >
+        <li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
             </form>
@@ -15,10 +15,10 @@
     }
     else
     {
-        <li>
-            <a class="" asp-area="Identity" asp-page="/Account/Register">S'enregister</a>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">S'enregister</a>
         </li>
-        <li >
-            <a class="" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
     }
