--- a/CarnetSanitaire.Web.UI/Views/Personnels/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Edit.cshtml
@@ -9,8 +9,8 @@
 <h4>Personnel</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
+    <div class="col-md-8">
+        <form asp-action="Edit" class="col-12">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="SocieteId" />
@@ -35,14 +35,15 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="Statut" class="control-label"></label>
+                <input asp-for="Statut" class="" />
+            </div>
+            <div class="form-group col-12 row">
+                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-6" />
+                <a asp-controller="Personnels" asp-action="Index" asp-route-id="@Model.SocieteId" class="btn btn-outline-danger col-6">Retour</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
