--- a/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
@@ -6,22 +6,27 @@
     <script src="https://kit.fontawesome.com/b868aea368.js" crossorigin="anonymous"></script>
     <title>@ViewData["Title"] - CarnetSanitaire.Web.UI</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css" />
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="nav-wrapper blue darken-1">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="brand-logo" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book material-icons"></i>MRCarnetSanitaire</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li>
-                    <a class="" asp-area="" asp-controller="Societes" asp-action="Index">Societes</a>
-                </li>
-                <li>
-                    <a class="" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                </li>
-                <partial name="_LoginPartial" />
-            </ul>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul id="nav-mobile" class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Societes" asp-action="Index">Societes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                    </li>
+                    <partial name="_LoginPartial" />
+                </ul>
+            </div>
         </nav>
     </header>
     <div class="container">
@@ -31,23 +36,16 @@
     </div>
 
 
-    <footer class="page-footer blue darken-1">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    &copy; 2020 - MRCarnetSanitaire
-                </div>
-            </div>
-        </div>
-    </footer>
+
     <footer class="border-top footer text-muted">
         <div class="container">
-           
+            <span class="text-muted" wfd-id="1">&copy; 2020 - MRCarnetSanitaire</span>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
