--- a/CarnetSanitaire.Web.UI/Views/Shared/_LayoutLogin.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_LayoutLogin.cshtml
@@ -5,16 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://kit.fontawesome.com/b868aea368.js" crossorigin="anonymous"></script>
     <title>@ViewData["Title"] - CarnetSanitaire.Web.UI</title>
-    <link rel="stylesheet" href="~/lib/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
     <header>
-        <nav class="nav-wrapper blue darken-1">
-            <a class="brand-logo" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book material-icons"></i>MRCarnetSanitaire</a>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <partial name="_LoginPartial" />
-            </ul>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><i class="fas fa-book material-icons"></i>MRCarnetSanitaire</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul id="nav-mobile" class="navbar-nav ml-auto">
+                    <partial name="_LoginPartial" />
+                </ul>
+            </div>
+
         </nav>
     </header>
     <div class="container">
@@ -23,23 +29,13 @@
         </main>
     </div>
 
-
-    <footer class="page-footer blue darken-1">
-        <div class="container">
-            <div class="row">
-                <div class="col l6 s12">
-                    &copy; 2020 - MRCarnetSanitaire
-                </div>
-            </div>
-        </div>
-    </footer>
     <footer class="border-top footer text-muted">
         <div class="container">
-
+            <span class="text-muted" wfd-id="1">&copy; 2020 - MRCarnetSanitaire</span>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/materialize/js/materialize.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 </body>
