--- a/CarnetSanitaire.Web.UI/Views/Personnels/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Create.cshtml
@@ -5,13 +5,13 @@
     int SocieteId = (int)ViewBag.SocieteId;
 }
 
-<h1>Create</h1>
+<h1>@ViewBag.Societe</h1>
 
-<h4>Personnel</h4>
+<h4>Ajout Personnel</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="col-md-8">
+        <form asp-action="Create"  class="col-12">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="SocieteId" value="@SocieteId" />
             <div class="form-group">
@@ -34,15 +34,12 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group col-12 row">
+                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-6" />
+                <a asp-action="Index" asp-route-id="@SocieteId" class="btn btn-outline-danger col-6">Retour</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
