--- a/CarnetSanitaire.Web.UI/Views/Personnels/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Details.cshtml
@@ -29,8 +29,8 @@
             @Html.DisplayFor(model => model.Societe.Nom)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="row col-12">
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info col-6">Edit</a>
+        <a asp-action="Index" class="btn btn-outline-danger col-6">Retour</a>
+    </div>
 </div>
