--- a/CarnetSanitaire.Web.UI/Views/Personnels/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Index.cshtml
@@ -7,7 +7,7 @@
 
 <h1>@ViewBag.Societe</h1>
 
-<table class="table" id="personnel">
+<table class="table" id="personneltable">
     <thead>
         <tr>
             <th>
@@ -57,8 +57,8 @@
                     @Html.DisplayFor(modelItem => item.Email)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a asp-action="Edit" asp-route-id="@item.Id" class="mx-2"><i class="fas fa-user-edit"></i></a>
+                    <a asp-action="Details" asp-route-id="@item.Id" class="mx-2"><i class="fas fa-info"></i></a>
                 </td>
             </tr>
         }
@@ -72,7 +72,7 @@
 @section scripts{
     <script type="text/javascript">
         $(document).ready(function () {
-            $('#personnel').DataTable();
+            $('#personneltable').DataTable();
         });
 
 
