--- a/CarnetSanitaire.Web.UI/Views/Societes/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Details.cshtml
@@ -4,28 +4,28 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+    <h1>Details Societe</h1>
 
 <div>
-    <h4>Societe</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.Nom)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-9">
             @Html.DisplayFor(model => model.Nom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-3">
             @Html.DisplayNameFor(model => model.Coordonnee)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-9">
             @Html.DisplayFor(model => model.Coordonnee.Adresse)<br />
             @Html.DisplayFor(model => model.Coordonnee.CodePostal) @Html.DisplayFor(model => model.Coordonnee.Ville)
         </dd>
     </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="row col-12">
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info col-6">Edit</a>
+        <a asp-action="Index" class="btn btn-outline-danger col-6">Retour</a>
+    </div>
+    
 </div>
