--- a/CarnetSanitaire.Web.UI/Views/Societes/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Edit.cshtml
@@ -4,12 +4,11 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+    <h1>Edit Societe</h1>
 
-<h4>Societe</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -53,8 +52,9 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group col-12 row">
+                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-6" />
+                <a asp-action="Index" class="btn btn-outline-danger col-6">Retour</a>
             </div>
         </form>
     </div>
