--- a/CarnetSanitaire.Web.UI/Views/Societes/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Index.cshtml
@@ -4,11 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h3>Sous-traitants</h3>
+<h1>Societes soustraitantes</h1>
 
-<p>
-    <a asp-action="Create">Nouveau SousTraitant</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -28,21 +25,29 @@
                 @Html.DisplayFor(modelItem => item.Nom)
             </td>
             <td>
-                @if (item.Personnels != null && item.Personnels.Count >0)
+                @if (item.Personnels != null && item.Personnels.Count > 0)
                 {
-                    <a asp-action="Index" asp-controller="Personnels" asp-route-id="@item.Id">@Html.DisplayFor(modelItem => item.Personnels.Count)</a>
+                    foreach (Personnel personnel in item.Personnels)
+                    {
+                        <a asp-action="Details" asp-controller="Personnels" asp-route-id="@personnel.Id">@personnel.Nom @personnel.Prenom</a><br />
+                    }                    
                 }
                 else
-                { 
+                {
                     <a asp-controller="Personnels" asp-action="Create" asp-route-id="@item.Id">Ajout une personne</a>
                 }
 
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="px-2"><i class="far fa-edit"></i></a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="px-2"><i class="fas fa-info"></i></a> | 
+                <a asp-controller="Personnels" asp-action="Index" asp-route-id="@item.Id" class="px-2"><i class="far fa-address-book"></i></a>
+                <a asp-controller="Personnels" asp-action="Create" asp-route-id="@item.Id" class="px-2"><i class="fas fa-user-plus"></i></a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+<div class="mt-3">
+    <a asp-action="Create" class="col-12 btn btn-outline-success">Nouvelle Societe</a>
+</div>
