Mise en place de la create avec la creation d'iun modelView d'installation

--- a/CarnetSanitaire.Web.UI/Views/Installations/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Installations/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarnetSanitaire.Web.UI.Models.Installation
+﻿@model CarnetSanitaire.Web.UI.Models.ModelViewInstallation
 
 @{
     ViewData["Title"] = "Create";
@@ -10,9 +10,22 @@
 <h4>Installation</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
+    <div class="col-md-8">
+        <form asp-action="Create" class="col-12">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-group">
+                <label asp-for="Materiaux" class="control-label"></label>
+                <select asp-for="Materiaux" class="form-control" asp-items="ViewBag.Materiaux" multiple></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="CalorifugeageEfId" class="control-label"></label>
+                <select asp-for="CalorifugeageEfId" class="form-control" asp-items="ViewBag.CalorifugeageEf"></select>
+            </div>
+            <div class="form-group">
+                <label asp-for="CalorifugeageEcsId" class="control-label"></label>
+                <select asp-for="CalorifugeageEcsId" class="form-control" asp-items="ViewBag.CalorifugeageEcs"></select>
+            </div>
+            <hr />
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Diagnostique_Realise" /> @Html.DisplayNameFor(model => model.Diagnostique_Realise)
@@ -28,9 +41,10 @@
                 <input asp-for="Diagnostique_Intervenant" class="form-control" />
                 <span asp-validation-for="Diagnostique_Intervenant" class="text-danger"></span>
             </div>
+            <hr />
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Interconnexion_Existance" /> @Html.DisplayNameFor(model => model.Interconnexion_Existance)
+                    @Html.DisplayNameFor(model => model.Interconnexion_Existance) <input class="form-check-input" asp-for="Interconnexion_Existance" />
                 </label>
             </div>
             <div class="form-group">
@@ -38,33 +52,22 @@
                 <input asp-for="InterconnexionType" class="form-control" />
                 <span asp-validation-for="InterconnexionType" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CalorifugeageEf" class="control-label"></label>
-                <input asp-for="CalorifugeageEf" class="form-control" />
-                <span asp-validation-for="CalorifugeageEf" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CalorifugeageEcs" class="control-label"></label>
-                <input asp-for="CalorifugeageEcs" class="form-control" />
-                <span asp-validation-for="CalorifugeageEcs" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ProductionId" class="control-label"></label>
-                <select asp-for="ProductionId" class ="form-control" asp-items="ViewBag.ProductionId"></select>
-            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="DispositifProtectionRetourEau" /> @Html.DisplayNameFor(model => model.DispositifProtectionRetourEau)
+                    @Html.DisplayNameFor(model => model.DispositifProtectionRetourEau) <input class="form-check-input" asp-for="DispositifProtectionRetourEau" />
                 </label>
             </div>
+            <hr />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <label asp-for="ProductionId" class="control-label"></label>
+                <select asp-for="ProductionId" class="form-control" asp-items="ViewBag.ProductionId"></select>
+            </div>
+
+            <div class="row col-12 py-2 form-group">
+                <input type="submit" value="Create" class="btn btn-outline-primary col-6" />
+                <a asp-action="Index" asp-controller="Home" class="btn btn-outline-danger col-6">Accueil</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
