--- a/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
@@ -11,45 +11,55 @@
     <h4>Installation</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Interconnexion_Existance)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Interconnexion_Existance)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InterconnexionType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InterconnexionType)
-        </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.CalorifugeageEf)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CalorifugeageEf)
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.CalorifugeageEf.Nom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.CalorifugeageEcs)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CalorifugeageEcs)
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.CalorifugeageEcs.Nom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Production)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Production.Id)
+        <dd class="col-sm-8">
+            @if (Model.Production == null)
+            {
+                <a asp-action="Create" asp-controller="Productions" asp-route-installationId="@Model.Id" class="btn btn-outline-secondary">Ajouter la production</a>
+            }
+            else
+            {
+                @Html.DisplayFor(model => model.Production.Identification)
+            }
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.DispositifProtectionRetourEau)
         </dt>
-        <dd class = "col-sm-10">
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.Interconnexion_Existance)
+        </dt>        
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.Interconnexion_Existance)
+        </dd>
+        @if (Model.Interconnexion_Existance)
+        {
+            <dt class="col-sm-4">
+                @Html.DisplayNameFor(model => model.InterconnexionType)
+            </dt>
+            <dd class="col-sm-8">
+                @Html.DisplayFor(model => model.InterconnexionType)
+            </dd>
+        }
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.DispositifProtectionRetourEau)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row col-12">
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info col-6">Modifier</a>
+    <a asp-action="Index" asp-controller="Home" class="btn btn-outline-danger col-6">Retour Accueil</a>
 </div>
