Ajout du multimateriaux dans les views

--- a/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
@@ -79,6 +79,6 @@
     </dl>
 </div>
 <div class="row col-12">
-    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info col-6">Modifier</a>
+    <a asp-action="Edit" class="btn btn-outline-info col-6">Modifier</a>
     <a asp-action="Index" asp-controller="Home" class="btn btn-outline-danger col-6">Retour Accueil</a>
 </div>
