--- a/CarnetSanitaire.Web.UI/Views/Diagnostiques/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Diagnostiques/Create.cshtml
@@ -12,6 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group form-check">
                 <label class="form-check-label">
@@ -27,10 +28,6 @@
                 <label asp-for="Diagnostique_Intervenant" class="control-label"></label>
                 <input asp-for="Diagnostique_Intervenant" class="form-control" />
                 <span asp-validation-for="Diagnostique_Intervenant" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InstallationId" class="control-label"></label>
-                <select asp-for="InstallationId" class ="form-control" asp-items="ViewBag.InstallationId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
