--- a/CarnetSanitaire.Web.UI/Views/Diagnostiques/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Diagnostiques/Edit.cshtml
@@ -14,6 +14,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="InstallationId" value="@ViewBag.InstallationId"/>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Diagnostique_Realise" /> @Html.DisplayNameFor(model => model.Diagnostique_Realise)
@@ -28,11 +29,6 @@
                 <label asp-for="Diagnostique_Intervenant" class="control-label"></label>
                 <input asp-for="Diagnostique_Intervenant" class="form-control" />
                 <span asp-validation-for="Diagnostique_Intervenant" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="InstallationId" class="control-label"></label>
-                <select asp-for="InstallationId" class="form-control" asp-items="ViewBag.InstallationId"></select>
-                <span asp-validation-for="InstallationId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
