--- a/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                         <a class="nav-link" asp-area="" asp-controller="Societes" asp-action="Index">Societes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        <a class="nav-link" asp-area="" asp-controller="Installations" asp-action="Details">Installation</a>
                     </li>
                     <partial name="_LoginPartial" />
                 </ul>
