un peu de UI et debut de edit productions

--- a/CarnetSanitaire.Web.UI/Views/Productions/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Productions/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CarnetSanitaire.Web.UI.Models.Production
+﻿@model CarnetSanitaire.Web.UI.Models.ModelViewProduction
 
 @{
     ViewData["Title"] = "Edit";
