--- a/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
@@ -44,11 +44,11 @@
         <dd class="col-sm-8">
             @if (Model.Diagnostiques != null && Model.Diagnostiques.Count > 0)
             {
-                <a asp-action="Index" asp-controller="Diagnostiques" asp-route-installationId="@Model.Id" class="btn btn-outline-secondary">Voir les diagnostiques</a>
+                <a asp-action="Index" asp-controller="Diagnostiques" class="btn btn-outline-secondary col-5">Voir les diagnostiques</a>
             }
             else
             {
-                <a asp-action="Create" asp-controller="Diagnostiques" asp-route-installationId="@Model.Id" class="btn btn-outline-secondary">Ajouter un diagnostique</a>
+                <a asp-action="Create" asp-controller="Diagnostiques" class="btn btn-outline-secondary col-5">Ajouter un diagnostique</a>
             }
         </dd>
 
@@ -58,11 +58,11 @@
         <dd class="col-sm-8">
             @if (Model.Production == null)
             {
-                <a asp-action="Create" asp-controller="Productions" class="btn btn-outline-secondary">Ajouter la production</a>
+                <a asp-action="Create" asp-controller="Productions" class="btn btn-outline-secondary col-5">Ajouter la production</a>
             }
             else
             {
-                <a asp-action="Details" asp-controller="Productions" class="btn btn-outline-secondary">Voir la Production</a>
+                <a asp-action="Details" asp-controller="Productions" class="btn btn-outline-secondary col-5">Voir la Production</a>
             }
         </dd>
 
