Production editon OK

--- a/CarnetSanitaire.Web.UI/Views/Home/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Etablissement
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "DashBoard";
 }
 
 <div class="text-center">
