--- a/CarnetSanitaire.Web.UI/Views/Productions/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Productions/Edit.cshtml
@@ -10,7 +10,7 @@
 <h4>Production</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-8">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -35,13 +35,20 @@
                 <span asp-validation-for="TemperatureBouclageEcs" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <label asp-for="TypeReseauId" class="control-label"></label>
+                <select asp-for="TypeReseauId" asp-items="ViewBag.TypeReseau" class="form-control"></select>
+                <span asp-validation-for="TypeReseauId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="TypeProductionId" class="control-label"></label>
+                <select asp-for="TypeProductionId" asp-items="ViewBag.TypeProduction" class="form-control"></select>
+                <span asp-validation-for="TypeProductionId" class="text-danger"></span>
+            </div>
+            <div class="row form-group col-12">
+                <input type="submit" value="Modifier" class="btn btn-outline-primary col-6" />
+                <a asp-action="Details"  class="btn btn-outline-danger col-6" >Retour</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
