--- a/CarnetSanitaire.Web.UI/Views/Diagnostiques/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Diagnostiques/Details.cshtml
@@ -10,28 +10,28 @@
 <div>
     <h4>Diagnostique</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row col-md-8">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Diagnostique_Realise)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Diagnostique_Realise)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Diagnostique_Date)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Diagnostique_Date)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Diagnostique_Intervenant)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Diagnostique_Intervenant)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row col-md-8">
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary col-12 col-md-6">Edit</a>
+    <a asp-action="Index" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
 </div>
