--- a/CarnetSanitaire.Web.UI/Views/Diagnostiques/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Diagnostiques/Index.cshtml
@@ -43,5 +43,6 @@
     </tbody>
 </table>
 <div class="row col-12">
-    <a asp-action="Create" class="btn btn-outline-success col-12">Nouveau Diag.</a>
+    <a asp-action="Create" class="btn btn-outline-success col-12 col-md-6">Nouveau Diag.</a>
+    <a asp-action="Details" asp-controller="Installations" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
 </div>
