--- a/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_LoginPartial.cshtml
@@ -15,9 +15,9 @@
     }
     else
     {
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link" asp-area="Identity" asp-page="/Account/Register">S'enregister</a>
-        </li>
+        </li>*@
         <li class="nav-item">
             <a class="nav-link" asp-area="Identity" asp-page="/Account/Login">Login</a>
         </li>
