--- a/CarnetSanitaire.Web.UI/Views/Installations/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Installations/Edit.cshtml
@@ -40,9 +40,9 @@
                 <label class="control-label">@Html.DisplayNameFor(model => model.DispositifProtectionRetourEau)</label>
                 <input class="form-control" asp-for="DispositifProtectionRetourEau" />
             </div>
-            <div class="row form-group col-12">
-                <input type="submit" value="Modifier" class="btn btn-outline-primary col-6" />
-                <a asp-action="Details" class="btn btn-outline-danger col-6">Retour</a>
+            <div class="row col-12 form-group">
+                <input type="submit" value="Create" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-action="Details" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
     </div>
