Design UI Personnel Uniformisation

--- a/CarnetSanitaire.Web.UI/Views/Personnels/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Index.cshtml
@@ -64,8 +64,9 @@
         }
     </tbody>
 </table>
-<div class="mt-3">
-    <a asp-action="Create" asp-route-id="@SocieteId" class="col-12 btn btn-outline-success">Nouvelle Personne</a>
+<div class="mt-3 col-12 row">
+    <a asp-action="Create" asp-route-id="@SocieteId" class="col-12 col-md-6 btn btn-outline-success">Nouvelle Personne</a>
+    <a asp-action="Index" asp-controller="Home" class="col-12 col-md-6 btn btn-outline-danger">Retour</a>
 </div>
 
 
