--- a/CarnetSanitaire.Web.UI/Views/Personnels/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Details.cshtml
@@ -9,28 +9,28 @@
 <div>
     <h4>Personnel</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row col-md-8">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Nom)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Nom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Prenom)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Prenom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Societe)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Societe.Nom)
         </dd>
     </dl>
-    <div class="row col-12">
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info col-6">Edit</a>
-        <a asp-action="Index" class="btn btn-outline-danger col-6">Retour</a>
+    <div class="row col-md-8">
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info col-12 col-md-6">Edit</a>
+        <a asp-action="Index" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
     </div>
 </div>
