--- a/CarnetSanitaire.Web.UI/Views/Personnels/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Edit.cshtml
@@ -39,8 +39,8 @@
                 <input asp-for="Statut" class="" />
             </div>
             <div class="form-group col-12 row">
-                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-6" />
-                <a asp-controller="Personnels" asp-action="Index" asp-route-id="@Model.SocieteId" class="btn btn-outline-danger col-6">Retour</a>
+                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-controller="Personnels" asp-action="Index" asp-route-id="@Model.SocieteId" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
     </div>
