--- a/CarnetSanitaire.Web.UI/Views/Personnels/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Personnels/Create.cshtml
@@ -35,7 +35,7 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group col-12 row">
-                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-12 col-md-6" />
+                <input type="submit" value="Ajouter" class="btn btn-outline-primary col-12 col-md-6" />
                 <a asp-action="Index" asp-route-id="@SocieteId" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
