--- a/CarnetSanitaire.Web.UI/Views/Productions/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Productions/Create.cshtml
@@ -10,7 +10,7 @@
 <h4>Production</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -44,8 +44,8 @@
                 <span asp-validation-for="TypeProductionId" class="text-danger"></span>
             </div>
             <div class="row form-group">
-                <input type="submit" value="Create" class="btn btn-outline-primary col-6" />
-                <a asp-action="Details" asp-controller="Installations" class="btn btn-outline-danger col-6">Retour</a>
+                <input type="submit" value="Ajouter" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-action="Details" asp-controller="Installations" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
     </div>
