--- a/CarnetSanitaire.Web.UI/Views/Productions/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Productions/Details.cshtml
@@ -10,46 +10,46 @@
 <div>
     <h4>Production</h4>
     <hr />
-    <dl class="row">
-        <dt class="col-sm-4">
+    <dl class="row col-md-8">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.Identification)
         </dt>
-        <dd class="col-sm-8">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.Identification)
         </dd>
-        <dt class="col-sm-4">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.NombreBallon)
         </dt>
-        <dd class="col-sm-8">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.NombreBallon)
         </dd>
-        <dt class="col-sm-4">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.TemperatureDepartEcs)
         </dt>
-        <dd class="col-sm-8">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.TemperatureDepartEcs)
         </dd>
-        <dt class="col-sm-4">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.TemperatureBouclageEcs)
         </dt>
-        <dd class="col-sm-8">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.TemperatureBouclageEcs)
         </dd>
-        <dt class="col-sm-4">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.TypeReseau)
         </dt>
-        <dd class="col-sm-8">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.TypeReseau.Nom)
         </dd>
-        <dt class="col-sm-4">
+        <dt class="col-sm-5">
             @Html.DisplayNameFor(model => model.TypeProduction)
         </dt>
-        <dd class="col-sm-8">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.TypeProduction.Nom)
         </dd>
     </dl>
 </div>
-<div class="row col-12">
-    <a asp-action="Edit" class="btn btn-outline-primary col-6">Modifier</a>
-    <a asp-action="Details" asp-controller="Installations" class="btn btn-outline-danger col-6">Retour</a>
+<div class="row col-md-8">
+    <a asp-action="Edit" class="btn btn-outline-primary col-12 col-md-6">Modifier</a>
+    <a asp-action="Details" asp-controller="Installations" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
 </div>
