Design UI Societe Uniformisation

--- a/CarnetSanitaire.Web.UI/Views/Societes/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Index.cshtml
@@ -48,6 +48,6 @@
 }
     </tbody>
 </table>
-<div class="mt-3">
+<div class="mt-3 col-12">
     <a asp-action="Create" class="col-12 btn btn-outline-success">Nouvelle Societe</a>
 </div>
