--- a/CarnetSanitaire.Web.UI/Views/Societes/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Details.cshtml
@@ -8,24 +8,23 @@
 
 <div>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-3">
+    <dl class="row col-md-8">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Nom)
         </dt>
-        <dd class = "col-sm-9">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Nom)
         </dd>
-        <dt class = "col-sm-3">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Coordonnee)
         </dt>
-        <dd class="col-sm-9">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.Coordonnee.Adresse)<br />
             @Html.DisplayFor(model => model.Coordonnee.CodePostal) @Html.DisplayFor(model => model.Coordonnee.Ville)
         </dd>
     </dl>
-    <div class="row col-12">
-        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-info col-6">Edit</a>
-        <a asp-action="Index" class="btn btn-outline-danger col-6">Retour</a>
-    </div>
-    
+    <div class="row col-md-8">
+        <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary col-12 col-md-6">Modifier</a>
+        <a asp-action="Index" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
+    </div>    
 </div>
