--- a/CarnetSanitaire.Web.UI/Views/Societes/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Societes/Edit.cshtml
@@ -53,8 +53,8 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group col-12 row">
-                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-6" />
-                <a asp-action="Index" class="btn btn-outline-danger col-6">Retour</a>
+                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-action="Index" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
     </div>
