Index Temeprature OK

--- a/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Installations" asp-action="Details">Installation</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="Temperatures" asp-action="IndexPoints">Températures</a>
+                    </li>
                     <partial name="_LoginPartial" />
                 </ul>
             </div>
