--- a/CarnetSanitaire.Web.UI/Views/Temperatures/EditPoint.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/EditPoint.cshtml
@@ -10,7 +10,7 @@
 <h4>PointReleveTemperature</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="EditPoint">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
@@ -26,22 +26,20 @@
             </div>
             <div class="form-group">
                 <label asp-for="TypePoint" class="control-label"></label>
-                <select asp-for="TypePointId" asp-items="ViewBag.TypePoint" class="form-control">                    
-                </select>
+                <select asp-for="TypePointId" asp-items="ViewBag.TypePoint" class="form-control"></select>
+                <span asp-validation-for="TypePointId" class="text-danger"></span>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Statut" /> @Html.DisplayNameFor(model => model.Statut)
                 </label>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+            <div class="form-group col-12 row">
+                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-action="IndexPoints" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
+            </div>            
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
