CRUD point releve temperature fonctionnel

--- a/CarnetSanitaire.Web.UI/Views/Temperatures/IndexPoints.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/IndexPoints.cshtml
@@ -35,7 +35,7 @@
                 @Html.DisplayFor(modelItem => item.Localisation)
             </td>
             <td>
-
+                @Html.DisplayFor(modelItem => item.TypePoint.Nom)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Statut)
