--- a/CarnetSanitaire.Web.UI/Views/Temperatures/EditPoint.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/EditPoint.cshtml
@@ -14,6 +14,7 @@
         <form asp-action="EditPoint">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="EtablissementId" />
             <div class="form-group">
                 <label asp-for="Nom" class="control-label"></label>
                 <input asp-for="Nom" class="form-control" />
